# NoduLoCC2026---Team-LIMED

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
docs/: MODEL_CARD_TEMPLATE.md  SETUP.md
nodulo/: README.md
nodulo/configs/: default.yaml
nodulo/src/nodulo/: config.py  utils.py
nodulo/src/nodulo/data/: datasets.py
nodulo/src/nodulo/models/: heads.py
nodulo/src/nodulo/scripts/: infer.py  train.py
nodulo/src/nodulo/training/: losses.py
src/nodulo/data/: io.py
src/nodulo/models/: backbones.py
src/nodulo/training/: pipeline.py
